Correct Feature Alignment

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -46,7 +46,7 @@ body {
 .feature {
   padding-bottom: .4rem;
   margin-bottom: 1.6rem;
-  text-align: left;
+  text-align: center;
   background: $featureBackgroundColour;
   background-size: cover;
   background-position: center;
@@ -54,7 +54,7 @@ body {
     min-height: 35vh;
     max-width: 60%;
     @include flex-direction(column);
-    @include justify-content(left);
+    @include justify-content(center);
   }
 }
 
